# pttools

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml  test.yml
agents/: base.py
agents/ad/: ad_agent.py
agents/api_security/: api_security_agent.py
agents/browser/: __init__.py  browser_agent.py
agents/cloud/: cloud_agent.py
agents/credential_tester/: credential_tester_agent.py
agents/detection/: detection_agent.py
agents/exploit_chain/: chain_agent.py
agents/llm_redteam/: __init__.py  adapter.py  agent.py  corpus.py  corpus.yaml  detector.py
agents/mobile/: mobile_agent.py
agents/poc_validator/: poc_agent.py
agents/privesc/: privesc_agent.py
agents/recon/: recon_agent.py
agents/report/: renderer.py  report_agent.py
agents/report/templates/: report.html.j2
agents/selection/: __init__.py  selection_agent.py
agents/social_engineer/: social_engineer_agent.py
agents/vuln_scanner/: vuln_scanner_agent.py
agents/web/: spa_probes.py  web_agent.py
agents/wireless/: wireless_agent.py
api/: __init__.py  server.py
api/static/: dashboard.css  dashboard.js  index.html
benchmarks/: README.md
benchmarks/challenges/dvwa-sqli/: SPEC.md  setup.sh  target.txt  teardown.sh
benchmarks/challenges/dvwa-sqli/expected/: solution.md
benchmarks/scripts/: run_all.sh  run_bench.sh
cli/: __init__.py  auth.py  auth_profiles.py  chain.py  ci.py  main.py  mcp_setup.py  menu.py  secure_credential.py
cli/credential_resolvers/: __init__.py  aws_sm.py  env.py  op.py  vault.py
config/: pentest-tools.yaml  settings.py
docs/: ROADMAP.md  credentialed-scans.md  getting-started.md  index.html  index.md  launch-playbook.md  phase7.md  release-pypi.md  status-page-runbook.md
docs/legal/: AUP.md  COOKIES.md  DPA.md  PRIVACY.md  README.md  RESPONSIBLE_DISCLOSURE.md  SUBPROCESSORS.md  TERMS.md  launch-config.yaml
docs/superpowers/plans/: 2026-04-30-public-launch.md
engine/: aup_consent.py  auth_handler.py  auth_session.py  authenticated_scan.py  cache.py  compliance.py  cve_db.py  cvss.py  dedup.py  diff.py  evidence.py  exec_context.py  findings_db.py  hitl.py  junit_xml.py  mcp_client.py  orchestrator.py  playbook.py  playbook_conditions.py  process_registry.py  rate_limiter.py  sarif.py  scanners.py  scope.py  target_expander.py  telemetry.py  tool_installer.py  tracing.py  webhooks.py  workflow.py
engine/llm/: __init__.py  client.py  cost.py  factory.py  prompts.py  tool_schemas.py
engine/llm/providers/: anthropic.py  litellm_provider.py  ollama.py  openai.py
mcp_server/: __init__.py  server.py
playbooks/builtin/: external-recon.yaml  llm-app-redteam.yaml  web-app-quick.yaml
scripts/: fill-legal.py  install-git-hooks.sh  preflight-check.py  run_dvwa_engagement.py  run_dvwa_full.py
specs/: 01-desktop-app.md  02-arxiv-preprint.md  03-educational-curriculum.md  04-stress-dos-gate.md  05-phishing-payload-gate.md  06-discord-server.md  07-saas-dashboard-improvements.md  08-cve-discovery-showcase.md  README.md
tests/: conftest.py  test_ad_agent_e2e_smoke.py  test_agents.py  test_agents_parallel.py  test_api_security_e2e_smoke.py  test_api_server.py  test_arjun_integration.py  test_aup_consent.py  test_auth_profile_cli.py  test_auth_profiles.py  test_auth_scan_e2e_smoke.py  test_auth_session.py  test_authenticated_scan_coverage.py  test_base_agent_coverage.py  test_browser_agent.py  test_browser_agent_e2e_smoke.py  test_browser_crawler.py  test_cache.py  test_chain.py  test_chain_quality.py  test_chain_validation.py  test_ci_mode.py  test_cli.py  test_cli_auth_coverage.py  test_cli_menu.py  test_cloud_agent_e2e_smoke.py  test_compliance.py  test_core.py  test_cost_tracker.py  test_csrf_auth_e2e_smoke.py  test_cve_db.py  test_cvss.py  test_dashboard.py  test_dedup.py  test_diff.py  test_engagement_lifecycle_e2e.py  test_evidence.py  test_evidence_contract.py  test_exec_context.py  test_findings_db_reconciler.py  (+44 more)
tools/: __init__.py  plugin_loader.py  registry.py
tools/wordlists/: common.txt
